package com.pollub.awpfog.utils

object TestTags {

    //////////////////////////////////////////////////
    //                  COMPONENTS
    //////////////////////////////////////////////////

    //EditGuardDataScreen
    val EDIT_GUARD_DATA_SCREEN_LOGIN_INPUT="Edit_Guard_Data_Screen_login_Input"
    val EDIT_GUARD_DATA_SCREEN_LOGIN_INPUT_ERROR="Edit_Guard_Data_Screen_login_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_PASSWORD_INPUT="Edit_Guard_Data_Screen_Password_Input"
    val EDIT_GUARD_DATA_SCREEN_PASSWORD_INPUT_ERROR="Edit_Guard_Data_Screen_Password_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_NEW_PASSWORD_INPUT="Edit_Guard_Data_Screen_New_Password_Input"
    val EDIT_GUARD_DATA_SCREEN_NEW_PASSWORD_INPUT_ERROR="Edit_Guard_Data_Screen_New_Password_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_NAME_INPUT="Edit_Guard_Data_Screen_Name_Input"
    val EDIT_GUARD_DATA_SCREEN_NAME_INPUT_ERROR="Edit_Guard_Data_Screen_Name_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_SURNAME_INPUT="Edit_Guard_Data_Screen_Surname_Input"
    val EDIT_GUARD_DATA_SCREEN_SURNAME_INPUT_ERROR="Edit_Guard_Data_Screen_Surname_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_EMAIL_INPUT="Edit_Guard_Data_Screen_Email_Input"
    val EDIT_GUARD_DATA_SCREEN_EMAIL_INPUT_ERROR="Edit_Guard_Data_Screen_Email_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_PHONE_INPUT="Edit_Guard_Data_Screen_Phone_Input"
    val EDIT_GUARD_DATA_SCREEN_PHONE_INPUT_ERROR="Edit_Guard_Data_Screen_Phone_Input_Error"
    val EDIT_GUARD_DATA_SCREEN_SUBMIT="Edit_Guard_Data_Screen_Submit"

    //InterventionButtons
    val INTERVENTION_BUTTONS_CONFIRM_ARRIVAL_BUTTON="Intervention_Buttons_Confirm_Arrival_Button"
    val INTERVENTION_BUTTONS_REJECT_BUTTON="Intervention_Buttons_Reject_Button"
    val INTERVENTION_BUTTONS_FINISH_BUTTON="Intervention_Buttons_Finish_Button"
    val INTERVENTION_BUTTONS_REINFORCEMENTS_BUTTON="Intervention_Buttons_Reinforcements_Button"

    //InterventionSection
    val INTERVENTION_SECTION_MAIN_COLUMN="Intervention_Section_Main_Column"
    val INTERVENTION_SECTION_CONFIRM_INTERVENTION_BUTTON="Intervention_Section_Confirm_Intervention_Button"
    val INTERVENTION_SECTION_REJECT_INTERVENTION_BUTTON="Intervention_Section_Reject_Intervention_Button"

    //TopBar
    val TOP_BAR_USER_NAME="Top_Bar_User_Name"
    val TOP_BAR_ICON_BUTTON="Top_Bar_Icon_Button"
    val TOP_BAR_LOGOUT_BUTTON="Top_Bar_Logout_Button"

    //////////////////////////////////////////////////
    //                  LOGIN
    //////////////////////////////////////////////////

    //LoginScreen
    val LOGIN_SCREEN_LOGIN_INPUT = "Login_Screen_Login_Input"
    val LOGIN_SCREEN_PASSWORD_INPUT = "Login_Screen_Password_Input"
    val LOGIN_SCREEN_LOGIN_BUTTON = "Login_Screen_Login_Button"
    val LOGIN_SCREEN_FORGOT_PASSWORD_BUTTON = "Login_Screen_Forgot_Password_Button"
    val LOGIN_SCREEN_REGISTER_BUTTON = "Login_Screen_Register_Button"

    //RegisterScreen
    val REGISTER_SCREEN_LOGIN_INPUT="Register_Screen_Login_Input"
    val REGISTER_SCREEN_LOGIN_INPUT_ERROR="Register_Screen_Login_Input_Error"
    val REGISTER_SCREEN_PASSWORD_INPUT="Register_Screen_Password_Input"
    val REGISTER_SCREEN_PASSWORD_INPUT_ERROR="Register_Screen_Password_Input_Error"
    val REGISTER_SCREEN_PASSWORD_REPEAT_INPUT="Register_Screen_Password_Repeat_Input"
    val REGISTER_SCREEN_PASSWORD_REPEAT_INPUT_ERROR="Register_Screen_Password_Repeat_Input_Error"
    val REGISTER_SCREEN_CREATE_ACCOUNT_BUTTON="Register_Screen_Create_Account_Button"
    val REGISTER_SCREEN_LOGIN_BUTTON="Register_Screen_Login_Button"

    //RegistrationScreenPersonalInformation
    val REGISTER_SCREEN_PERSONAL_INFORMATION_NAME_INPUT="Register_Screen_Personal_Information_Name_Input"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_NAME_INPUT_ERROR="Register_Screen_Personal_Information_Name_Input_Error"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_SURNAME_INPUT="Register_Screen_Personal_Information_Surname_Input"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_SURNAME_INPUT_ERROR="Register_Screen_Personal_Information_Surname_Input_Error"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_EMAIL_INPUT="Register_Screen_Personal_Information_Email_Input"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_EMAIL_INPUT_ERROR="Register_Screen_Personal_Information_Email_Input_Error"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_PHONE_INPUT="Register_Screen_Personal_Information_Phone_Input"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_PHONE_INPUT_ERROR="Register_Screen_Personal_Information_Phone_Input_Error"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_REGISTER_BUTTON="Register_Screen_Personal_Information_Register_Button"
    val REGISTER_SCREEN_PERSONAL_INFORMATION_CANCEL_BUTTON="Register_Screen_Personal_Information_Cancel_Button"

    //RemindPasswordScreen
    val REMIND_PASSWORD_SCREEN_EMAIL_INPUT="Remind_Password_Screen_Email_Input"
    val REMIND_PASSWORD_SCREEN_EMAIL_INPUT_ERROR="Remind_Password_Screen_Email_Input_Error"
    val REMIND_PASSWORD_SCREEN_REMIND_BUTTON="Remind_Password_Screen_Remind_Button"
    val REMIND_PASSWORD_SCREEN_NAV_BACK="Remind_Password_Screen_Nav_Back"

}